# battery-alert

./: Cargo.toml
src/: battery_reader.rs  main.rs  monitor.rs  utils.rs
